--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "devDependencies": {
     "@types/react": "16.0.31",
     "@types/react-native": "0.51.7",
-    "@types/react-navigation": "1.0.26",
     "@types/react-native-vector-icons": "4.4.2",
+    "@types/react-navigation": "1.0.26",
+    "concurrently": "3.4.0",
     "jest-expo": "23.0.0",
     "react-native-scripts": "1.8.1",
     "react-native-typescript-transformer": "1.1.4",
     "react-test-renderer": "16.0.0",
     "typescript": "2.6.2",
-    "concurrently": "3.4.0"
+    "react-native-calendars": "1.16.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -30,7 +31,8 @@
     "expo": "^23.0.4",
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-navigation": "1.0.0-beta.21",
-    "react-native-vector-icons": "4.4.3"
+    "react-native-calendars": "1.16.1",
+    "react-native-vector-icons": "4.4.3",
+    "react-navigation": "1.0.0-beta.21"
   }
 }
