--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@types/react-native": "0.51.7",
     "@types/react-native-vector-icons": "4.4.2",
     "@types/react-navigation": "1.0.26",
+    "@types/react-redux": "^5.0.14",
     "concurrently": "3.4.0",
     "jest-expo": "23.0.0",
+    "react-native-calendars": "1.16.1",
     "react-native-scripts": "1.8.1",
     "react-native-typescript-transformer": "1.1.4",
     "react-test-renderer": "16.0.0",
-    "typescript": "2.6.2",
-    "react-native-calendars": "1.16.1"
+    "typescript": "2.6.2"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -33,6 +34,9 @@
     "react-native": "0.51.0",
     "react-native-calendars": "1.16.1",
     "react-native-vector-icons": "4.4.3",
-    "react-navigation": "1.0.0-beta.21"
+    "react-navigation": "1.0.0-beta.21",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
