--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-native-vector-icons": "4.4.2",
     "@types/react-navigation": "1.0.26",
     "@types/react-redux": "^5.0.14",
+    "@types/redux-thunk": "^2.1.0",
     "concurrently": "3.4.0",
     "jest-expo": "23.0.0",
     "react-native-calendars": "1.16.1",
